# notesync

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/layout/: StudentSidebar.tsx  VaultSidebar.tsx
src/features/freeform/: FreeformCanvas.tsx  NoteCard.tsx
src/features/organization/: StudyHubWorkspace.tsx
src/features/planner/: LeftSidebar.tsx  MainViews.tsx  PlannerHeader.tsx  PlannerPage.tsx  PlannerTabs.tsx  RightSidebar.tsx
src/features/planner/MainViews/: DayView.tsx  MonthView.tsx  WeekView.tsx
src/features/planner/RightSidebar/: AgendaPanel.tsx  TaskInspector.tsx
src/features/updates/: UpdateChangelogDialog.tsx  autoUpdate.ts  updatePersistence.ts
src/state/: store.ts  vaultStore.ts
