[package]
name = "notesync"
version = "0.0.2"
description = "NoteSync freeform notes for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "notesync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
